Update documentation: Modify icons for configuration examples, enhance Python and TypeScript SDK descriptions, and remove outdated sections from external tools

--- a/docs/dev-deploy/configuration.mdx
+++ b/docs/dev-deploy/configuration.mdx
@@ -673,7 +673,7 @@ More configuration examples are available in the cookbook:
   </Card>
   <Card
     title="General Bot"
-    icon="robot"
+    icon="school"
     href="https://github.com/dowhiledev/nomos/blob/main/cookbook/examples/general-bot/"
   >
     Basic conversational agent
