--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -46,7 +46,7 @@ This section contains real-world examples demonstrating NOMOS capabilities acros
   </Card>
   <Card
     title="Master Roshi Agent"
-    icon="martial-arts"
+    icon="dragon"
     href="https://github.com/dowhiledev/nomos/blob/main//cookbook/examples/master-roshi/"
   >
     Dragon Ball-themed training assistant with API tool integration
