--- a/docs/qa/observability.mdx
+++ b/docs/qa/observability.mdx
@@ -23,7 +23,7 @@ Traditional AI agents are often impossible to debug or monitor effectively, maki
   <Card title="Production Insights" icon="eye" iconType="solid">
     Monitor agent behavior in production to identify issues and optimization opportunities
   </Card>
-  <Card title="Compliance & Auditing" icon="document-check" iconType="solid">
+  <Card title="Compliance & Auditing" icon="gavel" iconType="solid">
     Maintain detailed audit trails for enterprise compliance and regulatory requirements
   </Card>
 </CardGroup>
