--- a/docs/sdks/python-sdk.mdx
+++ b/docs/sdks/python-sdk.mdx
@@ -1,12 +1,8 @@
 ---
 title: "Python SDK"
-description: "Official Python client library for connecting to Nomos Agent API servers"
+description: "The Nomos Python SDK provides a typed, async-first client library for connecting to hosted Nomos agents. It supports both stateful sessions and stateless chat modes with comprehensive authentication options."
 icon: "python"
 ---
-
-# Nomos Python SDK
-
-The Nomos Python SDK provides a typed, async-first client library for connecting to hosted Nomos agents. It supports both stateful sessions and stateless chat modes with comprehensive authentication options.
 
 ## Installation
 
