--- a/docs/sdks/typescript-sdk.mdx
+++ b/docs/sdks/typescript-sdk.mdx
@@ -1,12 +1,8 @@
 ---
 title: "TypeScript SDK"
-description: "Official TypeScript/JavaScript client library for connecting to Nomos Agent API servers"
-icon: "javascript"
+description: "The Nomos TypeScript SDK provides a fully typed, promise-based client library for connecting to Nomos agents. It works in both Node.js and browser environments with comprehensive authentication support."
+icon: "js"
 ---
-
-# Nomos TypeScript SDK
-
-The Nomos TypeScript SDK provides a fully typed, promise-based client library for connecting to Nomos agents. It works in both Node.js and browser environments with comprehensive authentication support.
 
 ## Installation
 
